# asiotestrobot

./: .gitmodules  README.md
AELog/analyze/: 仙境传说RO技术测试基础数据需求 20181009,第二版本.xlsx  仙境传说RO首次平台测试基础数据需求 20181019v2.xlsx  分层提数需求---等级分布,  职业分布,  任务漏斗.xlsx
AELog/data_and_handle/: backup_tlog_zip.py  clear_mongodb_by_serverid.py  commit_ro_tlog_mongo_from_zip.py
AELog/data_and_handle/build_xml_cpp/: Readme.txt  parse_build_cpp_struct.py  parse_build_create_kudu.py  parse_build_create_mysql.py  parse_build_define.py  parse_build_define_newest.py  parse_build_xml.py  ro_tlog_define.py  ro_tlog_define_auto.h  (+2 more)
AESever/: CMakeLists.txt  main.cpp
AESever/client/: .gitignore  CMakeLists.txt  main.cpp
AESever/common/: ae_lock.h  ae_log.cpp  ae_log.h  client_manager.cpp  client_manager.h  freelist.cpp  freelist.h  log.h  message_center.cpp  message_center.h  network_listener.cpp  network_peer.cpp  network_peer.h  object_pool.cpp  object_pool.h  object_pool_manager.cpp  object_pool_manager.h  protocol_head.h  readerwriterqueue.h  singleton.h  timer_wheel_manager.cpp  timer_wheel_manager.h
AESever/component/: readme.txt
AESever/entity/: readme.txt
AESever/event/: readme.txt
AESever/general_server/: .gitignore  CMakeLists.txt  main.cpp
AESever/instance/: ae_timer.h  client_manager.cpp  client_manager.h  message_center.cpp  network_connector.cpp  network_connector.h  network_listener.h  network_peer.cpp
AESever/protocol/: ptl_login.h  ptl_login_decode4cpp.cpp  ptl_login_decode4cpp.h  ptl_login_deode4cpp.h  ptl_login_encode4cpp.cpp  ptl_login_encode4cpp.h  ptl_login_enode4cpp.cpp  ptl_login_enode4cpp.h
AESever/servergame/: CMakeLists.txt  main.cpp
AESever/system/: login_system.cpp  login_system.h  readme.txt
AESever/test_client/: .gitignore  CMakeLists.txt  main.cpp
AESever/tool/: build_coding_4_cpp.py  parse_h_struct.py
behaviac_3.6/: .gitignore
common/: chat_message.hpp
smalltest/: CMakeLists.txt  main.cpp
smalltest/test1-general/: .gitignore  main.cpp
smalltest/test2-atomic/: .gitignore  CMakeLists.txt  main.cpp  main汇编.s
testclient/: CMakeLists.txt  test_asio_client.cpp
testserver/: .gitignore  CMakeLists.txt  test_asio_server.cpp
todoarrange/: CMakeLists.txt  gperf_profiler.cpp  gperf_profiler.h  gperf_tcmalloc.cpp  gperf_tcmalloc.h  robot_client.cpp  robot_client.h  robot_io_com.cpp  robot_io_com.h
todoarrange/rotlog/: chinese_hash_key_mgr.cpp  chinese_hash_key_mgr.h  ro_tlog_define.h  ro_tlog_define_auto.h  ro_tlog_mgr.cpp  ro_tlog_mgr.h
todoarrange/tools/: build_coding_4_cpp.py  build_coding_4_cpp_export.py  build_coding_4_java.py  build_coding_4_lua.py  build_coding_4_py.py  build_cpp_config.py  build_lua_json_struct_str.py  build_protocol_4_passport.py  build_protocol_coding.py  build_utf8_enum.py  build_utf8_msg.py  copy_version.py  global_path.py  init_tool.py  misc.py  print_path.py  protocol_enums_passport.py  protocol_json_str.py  server_cfg.py  server_config_parse.py  stop_server.py  test.lua  test.py  test_client_lib.py  test_coding.py  test_db.py  testclient.py  testclient2.py  translate_excel_2_csv.py
todoarrange/tools/autotest_client/: easy_repeat_send_client_test.py  emailReporter.py  http_snap.py  mass_client.py  mass_client_2_gameserver.py  mass_client_2_passport.py  mass_peer_PNL.py  mass_server_listener.py  mass_test_client.py  mass_test_server.py  masterControlClient.py  misc.py  protocol_enums.py  protocol_enums_.py  protocol_enums_PNL.py  terminateServerClient.py  test_client.py  test_client_2.py  test_client_3.py  test_client_4.py  test_easySocket.py  test_easySocket_client.py  test_easySocket_server.py  test_namedlist.py  test_namedlistPNL.py  test_namedlist_coding.py  test_namedlist_codingPNL_0_001.py  test_namedlist_coding_0_001.py  test_namedlist_coding_passport.py  test_namedlist_coding_passport_0_001.py  test_namedlist_passport.py  test_passport_client.py
todoarrange/tools/autotest_lib/: build_cpp_db_str.py  coder_hlp_lib.py  easySocket.py  example.xml  example_U8.xml  head.xml  indent_html.py  namedlist_Generator_lib.py  namedlist_Generator_lib_easy.py  net_hlp_lib.py  parseProtocolXmlFile_lib.py  parse_build_miniprotobuf.py  person_miniprotobuf.py  todo.readme.xml
todoarrange/tools/db_handle/: add_diamond.py  add_gang_record.py  add_iappay.py  add_rank_record.py  alter_gang_add_misc_and_task.py  alter_role_add_friend.py  alter_role_add_parameter.py  alter_role_add_parameters.py  alter_role_reset_rolename_index.py  alter_table_unsigned.py  build_cpp_db_str.py  change_outer_db_inner.py  get_level.py  init_account.py  init_db.py  init_db_passport.py  init_slave.py  pack_db.bat  parse_sql_str.py  rebuild_gang.py  rebuild_passport.py  rebuild_table.py  show_binlog_event.py  stuff_db.py  union_role_change_duplicate_rolename.py
todoarrange/tools/db_handle/LMP/: build_cpp_db_LMP.py  init_db.py
todoarrange/tools/db_handle/PNL/: build_cpp_db_PNL.py  dump_mysql_2_mongodb.py
todoarrange/tools/fake_lj_player/: fake_client.py  fake_player.py
todoarrange/tools/install_package/: install_package.py
todoarrange/tools/parse_log/: build_all.py  build_iap_statistic_html.py  build_level_statistic_html.py  build_login_statistic_html.py  build_online_statistic_html.py  get_error_statistic.py  get_iap_statistic.py  get_level_statistic.py  get_log_dispatch_over.py  get_log_save_failed.py  get_log_steps.py  get_login_logout.py  get_login_statistics.py  get_online_statistic.py  get_save_zero.py  get_send_too_big.py  parse_log.py  reporter.py
todoarrange/tools/pnl/: build_protocol_coding_PNL.py
todoarrange/tools/pp_zhushou_hlp/: pp_zhushou_hlp.py  server.py
todoarrange/tools/push_notification/: APNS_client.py
todoarrange/tools/server_control/: do_terminateServer.py  masterControlClient.py
todoarrange/tools/server_status/: build_server_status_4_client.py  easySocket_server_reporter.py  get_server_config.py  gm_client.py  server_report_master.py  server_report_slave.py
todoarrange/tools/version_control/: build_new_zone.py  global_path.py  subversion_control.py  update_server.py  version_control_global_setting.py
(+7 files in other folders)
