cmake_minimum_required(VERSION 3.0)

INCLUDE_DIRECTORIES( .  )
INCLUDE_DIRECTORIES( ../common)
INCLUDE_DIRECTORIES(../asio-1.10.8/include )

ADD_DEFINITIONS(-DASIO_STANDALONE)

PROJECT(robotclient)

FILE(GLOB_RECURSE SRC_LIST *.cpp)
AUX_SOURCE_DIRECTORY(../common SRC_LIST)


ADD_EXECUTABLE(robotclient ${SRC_LIST})
